# orwell_debug_opengl_example

./: .gitignore  .gitignore.save  CMakeLists.txt  Makefile  OpenGlVideoQtQuick2.cpp  OpenGlVideoQtQuick2.h  README.md  clean_trash.sh  cmakeremember
docker/: Dockerfile  build.sh  qt-installer-noninteractive.qs  run.sh
orwellJS/: .flowconfig  app.json  index.desktop.js  package-lock.json  package.json
orwellJS/android/: settings.gradle
orwellJS/android/app/: BUCK  build.gradle
orwellJS/android/app/src/main/: AndroidManifest.xml
orwellJS/android/app/src/main/java/com/orwelljs/: MainActivity.java  MainApplication.java
orwellJS/android/app/src/main/res/values/: strings.xml
orwellJS/desktop/: CMakeLists.txt  Makefile  build.sh  run-app.sh
orwellJS/desktop/modules/mediaplayer/desktop/: Makefile
orwellJS/ios/orwellJS/: AppDelegate.m  Info.plist
orwellJS/ios/orwellJS.xcodeproj/: project.pbxproj
orwellJS/ios/orwellJS.xcodeproj/xcshareddata/xcschemes/: orwellJS-tvOS.xcscheme  orwellJS.xcscheme
orwellJS/ios/orwellJS/Base.lproj/: LaunchScreen.xib
orwellJS/ios/orwellJSTests/: orwellJSTests.m
orwellJS/modules/mediaplayer/desktop/: CMakeLists.txt  mediaplayermanager.cpp  mediaplayermanager.h  player.js
orwellJS/onvif/: example.js  example5.js  example_fetch.js  package-lock.json  package.json
qt/: CMakeLists.txt  Makefile  clean_everything.sh  main.cpp  main.qml  qrc_qml.cpp
